@@ -542,12 +542,14 @@ AC_CONFIG_FILES([
     lib/cloudi_service_db_memcached/src/cloudi_service_db_memcached.app.src
     lib/cloudi_service_db_mysql/src/cloudi_service_db_mysql.app.src
     lib/cloudi_service_db_pgsql/src/cloudi_service_db_pgsql.app.src
+    lib/cloudi_service_db_riak/src/cloudi_service_db_riak.app.src
     lib/cloudi_service_db_tokyotyrant/src/cloudi_service_db_tokyotyrant.app.src
     lib/cloudi_service_filesystem/src/cloudi_service_filesystem.app.src
     lib/cloudi_service_http_client/src/cloudi_service_http_client.app.src
     lib/cloudi_service_http_cowboy/src/cloudi_service_http_cowboy.app.src
     lib/cloudi_service_http_elli/src/cloudi_service_http_elli.app.src
     lib/cloudi_service_map_reduce/src/cloudi_service_map_reduce.app.src
+    lib/cloudi_service_oauth1/src/cloudi_service_oauth1.app.src
     lib/cloudi_service_queue/src/cloudi_service_queue.app.src
     lib/cloudi_service_quorum/src/cloudi_service_quorum.app.src
     lib/cloudi_service_router/src/cloudi_service_router.app.src
