@@ -1,6 +1,9 @@
+%-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
+% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
+
 {application, cloudi_service_db_riak,
   [{description, "Riak CloudI Service"},
-   {vsn, "1.3.3"},
+   {vsn, "@VERSION@"},
    {modules, [
         ]},
    {registered,[
